--- a/bootstrap-site.html
+++ b/bootstrap-site.html
@@ -53,7 +53,7 @@
             .four-box div{
                height: 350px;
                background-color: aquamarine;
-               border: 1px solid red;
+             
             }
             .four-box div:nth-child(1){
                 background-color: #d7edd8;
@@ -66,8 +66,37 @@
             }
             .four-box div span{
                 position: absolute;
-                top: 90%;
+                top: 80%;
                 left: 15%;
+            }
+            .line::after{
+              content: "";
+              position: absolute;
+              height: 3px;
+              background-color: black;
+              width: 0%;
+              left: 0;
+              bottom: -5px;
+              transition: 0.5s;
+            }
+            .line:hover:after{
+              width: 100%;
+            }
+            .description div{
+                height: 300px;
+             
+            }
+            .left{
+                background-image: url("https://mobirise.com/extensions/personam4/assets/images/mbr-1.jpg");
+                height: 400px;
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+            .right{
+                background-image: url("https://mobirise.com/extensions/personam4/assets/images/mbr-4.jpg");
+                height: 400px;
+                background-repeat: no-repeat;
+                background-size: cover;
             }
         </style>
     </head>
@@ -85,29 +114,61 @@
         </div>
       </div>
       <div class="container-fluid">
-        <div class="row four-box mt-4">
-            <div class="col-md-3 p-5  position-relative">
+        <div class="row mt-4">
+            <div class="col-md-3  four-box p-3  position-relative">
+               <div style="background-color: #d7edd8;" class="p-3"> 
                 <h1 class="mb-5">Style</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
-                <span style="margin-bottom: -20px;">View more</span>
+                <span class="line" style="margin-bottom: -20px;">View more</span>
+               </div> 
             </div>
-            <div class="col-md-3 p-5  position-relative">
-                <h1 class="mb-5">Style</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
-                <span style="margin-bottom: -20px;">View more</span>
-            </div>
-            <div class="col-md-3 p-5  position-relative">
-                <h1 class="mb-5">Style</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
-                <span style="margin-bottom: -20px;">View more</span>
-            </div>
-            <div class="col-md-3 p-5  position-relative">
-                <h1 class="mb-5">Style</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
-                <span style="margin-bottom: -20px;">View more</span>
-            </div>
+            <div class="col-md-3  four-box p-3  position-relative">
+                <div style="background-color: #fff3f3;" class="p-3"> 
+                 <h1 class="mb-5">Style</h1>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
+                 <span class="line" style="margin-bottom: -20px;">View more</span>
+                </div> 
+             </div>
+             <div class="col-md-3  four-box p-3  position-relative">
+                <div style="background-color: #d7edd8;" class="p-3"> 
+                 <h1 class="mb-5">Style</h1>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
+                 <span class="line" style="margin-bottom: -20px;">View more</span>
+                </div> 
+             </div>
+             <div class="col-md-3  four-box p-3  position-relative">
+                <div style="background-color: #fff3f3;" class="p-3"> 
+                 <h1 class="mb-5">Style</h1>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit.</p>
+                 <span class="line" style="margin-bottom: -20px;">View more</span>
+                </div> 
+             </div>
             <br/>
             <br/>
+        </div>
+      </div>
+      <div class="container">
+        <div class="row description">
+            <div class="col-md-6 d-flex flex-row align-items-center">
+                <h1 class="display-4 text-right">A new way to create design for you</h1>
+            </div>
+            <div class="col-md-6 d-flex flex-column justify-content-center">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitdo eiusmod temporeum dicant partem scripserit. Lorem ipsum dolor sit amet, consec tetur adipiscing elit adipiscing elitdo.</p>
+                <span style="font-size: 20px;" class="text-uppercase mt-3">View more</span>
+            </div>
+        </div>
+      </div>
+      <div style="background-color: #fff3f3;" class="pt-5">
+        <h1 class="text-center" style="font-size: 50px; font-family: sans-serif;">Make Your Style Today</h1>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6 left"></div>
+                <div class="offset-md-2 col-md-4 right"></div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">Ideas<br/>Projects</div>
+                <div class="offset-md-2 col-md-4">Skills<br/>Portfolio</div>
+            </div>
         </div>
       </div>
     </body>
